# Project1_S16_K23a

./: CMakeLists.txt  Makefile  README.md  buffer.c  buffer.h  cc.c  cc.h  globals.h  grail.c  grail.h  hash.c  hash.h  index.c  index.h  main.c  scc.c  scc.h  search.c  search.h  thread.c  thread.h
